src/objects/Report_Request__c.object
<CustomObject>
    <description>This object contents reports</description>
    <fields>
        <fullName>AsOfDate__c</fullName>
        <description>We will generate report up to this date.</description>
        <label>AsOfDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Count__c</fullName>
        <label>Future Count</label>
        <summaryForeignKey>Report_Request_Child__c.Report_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Trial Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adverse Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_Institution_Id__c</fullName>
        <label>Selected Institution Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Institution_Name__c</fullName>
        <label>Selected Institution Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Trial_Id__c</fullName>
        <label>Selected Trial Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Trial_Name__c</fullName>
        <label>Selected Trial Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Report Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Report Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>